--- a/loucademia/WebContent/WEB-INF/web.xml
+++ b/loucademia/WebContent/WEB-INF/web.xml
@@ -21,4 +21,9 @@
   	</web-resource-collection>
   	<auth-constraint/>
   </security-constraint>
+  
+  <context-param>
+	<param-name>javax.faces.DATETIMECONVERTER_DEFAULT_TIMEZONE_IS_SYSTEM_TIMEZONE</param-name>
+	<param-value>true</param-value>
+	</context-param>
 </web-app>
